recursos/peladonerd-master/kubernetes/8/05-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: v1.peladonerd.local
    http:
      paths:
      - path: /
        pathType: Exact
        backend:
          service:
            name: hello-v1-svc
            port:
              number: 80
        
  - host: v2.peladonerd.local 
    http:
      paths:
      - path: /
        pathType: Exact
        backend:
          service:
            name: hello-v2-svc
            port:
              number: 80

# https://kubernetes.io/docs/concepts/services-networking/ingress/
